[SYSTEMDS-3873] Java 17 System POM